crates/biome_module_graph/tests/snapshots/test_jsx_imports_css_file.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/App.jsx`

## Source

```jsx
import "./styles.css";

export function App() {
	return <div className="button header">Hello</div>;
}
```

## Module Info

```
Exports {
  "App" => {
    ExportOwnExport => JsOwnExport::Binding(41..44)
  }
}
Imports {
  No imports
}
Side-effect imports: [
  "./styles.css" => /src/styles.css,
]
Referenced classes: [
  button,
  header,
]
```


# `/src/styles.css`

## Source

```css
.button {
	color: red;
}
.header {
	font-size: 24px;
}
```

## Module Info

```
Classes {
  button,
  header,
}
Imports {
  No imports
}
```
