crates/biome_module_graph/tests/snapshots/test_namespace_reexport_type_inference.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/barrel.ts` (Module 1)

## Source

```ts
export * as MyNs from "./source.ts";
```

## Module Info

```
Exports {
  "MyNs" => {
    ExportOwnExport => JsOwnExport::Namespace(Reexport(
      Specifier: "./source.ts"
      Resolved path: "/src/source.ts"
      Import Symbol: All
      Exported range: (0..36)
    ))
  }
}
Imports {
  No imports
}
Side-effect imports: [
  "./source.ts" => /src/source.ts,
]
```


# `/src/index.ts` (Not imported by resolver)

## Source

```ts
import { MyNs } from "./barrel.ts";

const result = MyNs.alpha();
```

## Module Info

```
Exports {
  No exports
}
Imports {
  "MyNs" => {
    Specifier: "./barrel.ts"
    Resolved path: "/src/barrel.ts"
    Import Symbol: MyNs
  }
}
```

## Registered types

```
Module TypeId(0) => Import Symbol: MyNs from "/src/barrel.ts"

Module TypeId(1) => Module(0) TypeId(0).alpha

Module TypeId(2) => Call Module(0) TypeId(1)(No parameters)
```

# `/src/source.ts` (Module 2)

## Source

```ts
/**
 * @description
 * I am a jsdoc
 */
export function alpha(): number {
	return 1;
}
```

## Module Info

```
Exports {
  "alpha" => {
    ExportOwnExport => JsOwnExport::Binding(114..119)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
alpha => BindingTypeData {
  Types Module(0) TypeId(1),
}
```

## Registered types

```
Module TypeId(0) => number: 1

Module TypeId(1) => sync Function "alpha" {
  accepts: {
    params: []
    type_args: []
  }
  returns: number
}
```

# Module Resolver

## Registered types

```
Full TypeId(0) => namespace for ModuleId(1)

Full TypeId(1) => namespace for ModuleId(2)

Full TypeId(2) => Import TypeId(2)

Full TypeId(3) => sync Function "alpha" {
  accepts: {
    params: []
    type_args: []
  }
  returns: number
}

Full TypeId(4) => number
```
