crates/biome_module_graph/tests/snapshots/test_normalize_type_collapses_equal_merged_reference_targets.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
type Foo = {
	name: "foo";
};

const Foo = {
	name: "foo",
} as const;

export { Foo };
```

## Inferred types

```
Binding Foo "Foo" => Object {
  prototype: No prototype
  members: ["name": string: foo]
}

Binding Foo "Foo" => Object {
  prototype: No prototype
  members: ["name": string: foo]
}

Expression "{ name: \"foo\", }" => Object {
  prototype: No prototype
  members: ["name": string: foo]
}

Expression "{ name: \"foo\", } as const" => Object {
  prototype: No prototype
  members: ["name": string: foo]
}

Expression "\"foo\"" => string: foo
```
