crates/biome_module_graph/tests/snapshots/test_normalize_type_preserves_recursive_array_local_edge.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
type Tree = number | Tree[];

export function readTree(value: Tree): Tree {
	return value;
}
```

## Inferred types

```
Binding Tree "Tree" => number | instanceof Array<instanceof Tree>

Binding readTree "readTree" => sync Function "readTree" {
  accepts: {
    params: [
      required value: instanceof Tree
    ]
    type_args: []
  }
  returns: instanceof Tree
}

Binding value "value" => instanceof Tree

Expression "value" => instanceof Tree
```
